Fix icon spacing and add remaining assets

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -1596,3 +1596,7 @@ ol.p-list--divided .p-list__item::before {
     }
   }
 }
+
+.u-icon-nudge span { 
+  margin-left: 1rem;
+}
